k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: avst
  labels:
    app: amazon-visionary
    environment: production
